Fix text break in wheelchair status dropdown for french and other weird languages.

--- a/app/assets/stylesheets/relaunch/_node_popup.css.scss
+++ b/app/assets/stylesheets/relaunch/_node_popup.css.scss
@@ -134,6 +134,8 @@
     a {
       line-height: 25px;
       padding: 5px 10px;
+      width: 215px;
+      overflow: hidden;
 
       .icon-question-sign {
         opacity: .5;
